Bug 70459 - Fatal: failed to create compositor
Summary: Fatal: failed to create compositor
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: 1.3.0
Hardware: Other All
: medium critical
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-14 16:56 UTC by U. Artie Eoff
Modified: 2018-04-04 22:45 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description U. Artie Eoff 2013-10-14 16:56:34 UTC
Unable to execute suid Weston from any session context

----

$ weston --backend=drm-backend.so --tty 3
Date: 2013-10-14 PDT
[09:49:18.849] weston 1.3.0
               http://wayland.freedesktop.org/
               Bug reports to: https://bugs.freedesktop.org/enter_bug.cgi?product=Wayland&component=weston&version=1.3.0
               Build:  
[09:49:18.849] OS: Linux, 3.9.5-301.fc19.x86_64, #1 SMP Tue Jun 11 19:39:38 UTC 2013, x86_64
[09:49:18.850] Using config file '/home/uartie/Work/wayland/weston.ini'
[09:49:18.850] Loading module '/home/uartie/Work/wayland/install/lib/weston/drm-backend.so'
[09:49:18.852] initializing drm backend
[09:49:19.419] drm fd not master
[09:49:19.419] couldn't open /dev/dri/card0, skipping
[09:49:19.419] failed to initialize kms
[09:49:19.425] fatal: failed to create compositor

----

wayland (master) 1.3.0-0-g2c3dbb8
drm (master) 2.4.47-0-g951ebe0
mesa (master) heads/master-0-g53904c6
libva (master) heads/master-0-g73a11b3
intel-driver (master) heads/master-0-g01b39f7
weston (master) heads/master-0-gbcfd07b
Comment 1 U. Artie Eoff 2013-10-14 20:53:06 UTC
First bad commit:

commit 0b12db5f519a347ce0e1d5262e0cb2e9e2cc6990
Author: Tomeu Vizoso <tomeu@tomeuvizoso.net>
Date:   Wed Oct 9 11:30:57 2013 +0200

    launcher: Wrap drmGetMagic and drmAuthMagic so we can build without libdrm
Comment 2 Kristian Høgsberg 2013-10-14 20:58:04 UTC
commit 876c75f1fabe77b2b190d4c62305428b8099b689
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Mon Oct 14 13:57:44 2013 -0700

    launcher: Fix reverted sense of drm_check_master() wrapper
    
    Also rename to drm_is_master() to make it clearer what we're checking.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=70459
Comment 3 U. Artie Eoff 2013-10-15 14:40:34 UTC
Leaving open until the patch is backported to 1.3 branch.
Comment 4 Kristian Høgsberg 2013-10-15 19:23:41 UTC
(In reply to comment #3)
> Leaving open until the patch is backported to 1.3 branch.

File it against 1.3 then.
Comment 5 Kristian Høgsberg 2013-10-21 21:15:42 UTC
Bug picked to 1.3 branch now, closing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.