launcher: Fix reverted sense of drm_check_master() wrapper

Also rename to drm_is_master() to make it clearer what we're checking.

https://bugs.freedesktop.org/show_bug.cgi?id=70459